src-tauri/check_errors.txt
cargo :     Checking c
orex v0.1.0 (E:\ai-des
ktop\local-ai\src-taur
i)
At line:1 char:1
+ cargo check 2>&1 | O
ut-File -FilePath chec
k_errors.txt -Encoding
 utf8
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (    Checki   
 ng co...l-ai\src-    
tauri):String) []    ,
 RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
warning: use of deprec
ated enum `llama_cpp_2
::model::Special`: Thi
s enum is a mixture of
 options for llama cpp
 providing less flexib
ility it only used wit
h deprecated methods a
nd will be removed in 
the future.
   --> src\gguf.rs:433
:65
    |
433 |         match mo
del.token_to_str(*toke
n_id, llama_cpp_2::mod
el::Special::No) {
    |                 
                      
                      
    ^^^^^^^
    |
    = note: `#[warn(de
precated)]` on by defa
ult

warning: use of deprec
ated method `llama_cpp
_2::model::LlamaModel:
:token_to_str`: Use `t
oken_to_piece` instead
   --> src\gguf.rs:433
:21
    |
433 |         match mo
del.token_to_str(*toke
n_id, llama_cpp_2::mod
el::Special::No) {
    |                 
    ^^^^^^^^^^^^

error[E0599]: no varia
nt or associated item 
named `No` found for e
num `Special` in the c
urrent scope
   --> src\gguf.rs:433
:74
    |
433 |         match mo
del.token_to_str(*toke
n_id, llama_cpp_2::mod
el::Special::No) {
    |                 
                      
                      
             ^^ varian
t or associated item n
ot found in `Special`

error[E0277]: `Pin<Box
<dyn RecordBatchStream
 + std::marker::Send>>
` is not an iterator
   --> src\vector_db.r
s:179:22
    |
179 |         for batc
h in batches {
    |                 
     ^^^^^^^ `Pin<Box<
dyn RecordBatchStream 
+ std::marker::Send>>`
 is not an iterator
    |
    = help: the trait 
`Iterator` is not impl
emented for `Pin<Box<d
yn RecordBatchStream +
 std::marker::Send>>`
    = note: required f
or `Pin<Box<dyn Record
BatchStream + std::mar
ker::Send>>` to implem
ent `IntoIterator`

error[E0282]: type ann
otations needed
   --> src\vector_db.r
s:180:23
    |
180 | ...   let ids = 
batch.column_by_name("
id").and_then(|c| c.as
_any().downcast_ref::<
StringArray>()).ok_or_
else(|| "ID column not
 found".to_...
    |                 
^^^^^ cannot infer typ
e

error[E0282]: type ann
otations needed
   --> src\vector_db.r
s:180:60
    |
180 | ...   let ids = 
batch.column_by_name("
id").and_then(|c| c.as
_any().downcast_ref::<
StringArray>()).ok_or_
else(|| "ID column not
 found".to_...
    |                 
                      
               ^  - ty
pe must be known at th
is point
    |
help: consider giving 
this closure parameter
 an explicit type
    |
180 |             let 
ids = batch.column_by_
name("id").and_then(|c
: /* Type */| c.as_any
().downcast_ref::<Stri
ngArray>()).ok_or_else
(|| "ID column not fou
nd".to_string())?;
    |                 
                      
                      
++++++++++++

error[E0282]: type ann
otations needed
   --> src\vector_db.r
s:181:74
    |
181 | ...   let file_p
aths = batch.column_by
_name("file_path").and
_then(|c| c.as_any().d
owncast_ref::<StringAr
ray>()).ok_or_else(|| 
"File path ...
    |                 
                      
                      
       ^  - type must 
be known at this point
    |
help: consider giving 
this closure parameter
 an explicit type
    |
181 |             let 
file_paths = batch.col
umn_by_name("file_path
").and_then(|c: /* Typ
e */| c.as_any().downc
ast_ref::<StringArray>
()).ok_or_else(|| "Fil
e path column not foun
d".to_string())?;
    |                 
                      
                      
              ++++++++
++++

error[E0282]: type ann
otations needed
   --> src\vector_db.r
s:182:70
    |
182 | ...   let conten
ts = batch.column_by_n
ame("content").and_the
n(|c| c.as_any().downc
ast_ref::<StringArray>
()).ok_or_else(|| "Con
tent column...
    |                 
                      
                      
   ^  - type must be k
nown at this point
    |
help: consider giving 
this closure parameter
 an explicit type
    |
182 |             let 
contents = batch.colum
n_by_name("content").a
nd_then(|c: /* Type */
| c.as_any().downcast_
ref::<StringArray>()).
ok_or_else(|| "Content
 column not found".to_
string())?;
    |                 
                      
                      
          ++++++++++++

error[E0282]: type ann
otations needed
   --> src\vector_db.r
s:183:74
    |
183 | ...   let embedd
ings = batch.column_by
_name("embedding").and
_then(|c| c.as_any().d
owncast_ref::<FixedSiz
eListArray>()).ok_or_e
lse(|| "Emb...
    |                 
                      
                      
       ^  - type must 
be known at this point
    |
help: consider giving 
this closure parameter
 an explicit type
    |
183 |             let 
embeddings = batch.col
umn_by_name("embedding
").and_then(|c: /* Typ
e */| c.as_any().downc
ast_ref::<FixedSizeLis
tArray>()).ok_or_else(
|| "Embedding column n
ot found".to_string())
?;
    |                 
                      
                      
              ++++++++
++++

error[E0282]: type ann
otations needed
   --> src\vector_db.r
s:184:78
    |
184 | ...   let symbol
_names = batch.column_
by_name("symbol_name")
.and_then(|c| c.as_any
().downcast_ref::<Stri
ngArray>()).ok_or_else
(|| "Symbol...
    |                 
                      
                      
           ^  - type m
ust be known at this p
oint
    |
help: consider giving 
this closure parameter
 an explicit type
    |
184 |             let 
symbol_names = batch.c
olumn_by_name("symbol_
name").and_then(|c: /*
 Type */| c.as_any().d
owncast_ref::<StringAr
ray>()).ok_or_else(|| 
"Symbol name column no
t found".to_string())?
;
    |                 
                      
                      
                  ++++
++++++++

error[E0282]: type ann
otations needed
   --> src\vector_db.r
s:185:76
    |
185 | ...   let chunk_
types = batch.column_b
y_name("chunk_type").a
nd_then(|c| c.as_any()
.downcast_ref::<String
Array>()).ok_or_else(|
| "Chunk ty...
    |                 
                      
                      
         ^  - type mus
t be known at this poi
nt
    |
help: consider giving 
this closure parameter
 an explicit type
    |
185 |             let 
chunk_types = batch.co
lumn_by_name("chunk_ty
pe").and_then(|c: /* T
ype */| c.as_any().dow
ncast_ref::<StringArra
y>()).ok_or_else(|| "C
hunk type column not f
ound".to_string())?;
    |                 
                      
                      
                ++++++
++++++

error[E0282]: type ann
otations needed
   --> src\vector_db.r
s:186:74
    |
186 | ...   let timest
amps = batch.column_by
_name("timestamp").and
_then(|c| c.as_any().d
owncast_ref::<UInt64Ar
ray>()).ok_or_else(|| 
"Timestamp ...
    |                 
                      
                      
       ^  - type must 
be known at this point
    |
help: consider giving 
this closure parameter
 an explicit type
    |
186 |             let 
timestamps = batch.col
umn_by_name("timestamp
").and_then(|c: /* Typ
e */| c.as_any().downc
ast_ref::<UInt64Array>
()).ok_or_else(|| "Tim
estamp column not foun
d".to_string())?;
    |                 
                      
                      
              ++++++++
++++

Some errors have detai
led explanations: E027
7, E0282, E0599.
For more information a
bout an error, try `ru
stc --explain E0277`.
warning: `corex` (lib)
 generated 2 warnings
error: could not compi
le `corex` (lib) due t
o 10 previous errors; 
2 warnings emitted
